--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Array Methods</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="icon/favicon-32x32.png" type="image/x-icon">
 </head>
-<body>
 
-<script src="js/index.js"></script>
+<body>
+    <h1>DOM Array Methods</h1>
+    <div class="container">
+        <aside>
+            <button id="add-user">Add User 👱‍♂️</button>
+            <button id="double">Double Money 💰</button>
+            <button id="show-millionaires">Show Only Millionaires 💵</button>
+            <button id="sort">Sort by Richest ↓</button>
+            <button id="calculate-wealth">Calculate entire Wealth 🧮</button>
+        </aside>
+        <main id="main">
+            <h2><strong>Person</strong>Wealth</h2>
+        </main>
+    </div>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
